improvements and fixes. added open sans package

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "mobx": "^2.3.6",
     "mobx-react": "^3.5.1",
+    "npm-font-open-sans": "0.0.3",
     "react": "^15.2.1",
     "react-dom": "^15.2.1"
   }
