added project wizard, bem, improvements

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mobx-react-devtools": "^4.2.3",
     "node-sass": "^3.8.0",
     "postcss-loader": "^0.9.1",
+    "readline-sync": "^1.4.4",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "stylelint": "^7.0.3",
