--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "typescript-react-mobx-boilerplate",
   "main": "source/scripts/index.tsx",
   "scripts": {
-    "start": "node ./misc/start.js",
+    "start": "node ./misc/start",
     "server": "webpack-dev-server --progress --colors --config ./misc/webpack.config.js",
     "prod-build": "webpack --progress --colors -p --config ./misc/webpack.config.js",
     "remove-build": "rm -rf build"
@@ -27,32 +27,40 @@
   "author": "Pavel Lozinsky <jingle@live.com> (http://github.com/lozinsky)",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^6.0.38",
+    "@types/react": "^0.14.33",
+    "@types/react-dom": "^0.14.16",
     "autoprefixer": "^6.4.0",
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.24.0",
     "empty-module": "0.0.2",
-    "eslint": "^3.3.1",
+    "eslint": "^3.4.0",
     "eslint-plugin-node": "^2.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
-    "mobx-react-devtools": "^4.2.4",
+    "mobx-react-devtools": "^4.2.5",
     "node-sass": "^3.8.0",
-    "postcss-loader": "^0.10.1",
-    "readline-sync": "^1.4.4",
+    "postcss-loader": "^0.11.0",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
-    "stylelint": "^7.1.0",
+    "stylelint": "^7.2.0",
     "stylelint-scss": "^1.3.4",
     "ts-loader": "^0.8.2",
     "tslint": "^3.15.1",
-    "typescript": "^2.0.0",
+    "typescript": "^2.0.2",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0",
-    "webpack-merge": "^0.14.1"
+    "webpack-merge": "^0.14.1",
+    "webpack-notifier": "^1.4.1"
   },
   "dependencies": {
-    "mobx": "^2.4.4",
+    "mobx": "^2.5.0",
     "mobx-react": "^3.5.5",
     "react": "^15.3.1",
     "react-dom": "^15.3.1"
