--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "typescript-react-mobx-boilerplate",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "typescript-react-mobx-boilerplate",
-  "main": "source/scripts/index.tsx",
+  "main": "build/index.html",
   "scripts": {
+    "start": "npm run server",
     "server": "webpack-dev-server --progress --colors --config ./misc/start",
-    "build": "webpack --progress --colors -p --config ./misc/start",
-    "remove": "node ./misc/utils/remove"
+    "build": "npm run clean && webpack --progress --colors -p --config ./misc/start",
+    "test": "jest --config jestconfig.json --no-cache",
+    "clean": "node ./misc/utils/clean",
+    "lint": "npm run lint:scripts && npm run lint:styles",
+    "lint:scripts": "tslint --type-check --project tsconfig.json",
+    "lint:styles": "stylelint source/styles/**/*.scss -s scss",
+    "travis": "npm run lint && npm test && npm run build"
   },
   "repository": {
     "type": "git",
@@ -16,6 +22,7 @@
     "react",
     "mobx",
     "react-mobx",
+    "jest",
     "boilerplate",
     "typescript"
   ],
@@ -24,45 +31,45 @@
   },
   "homepage": "https://github.com/lozinsky/typescript-react-mobx-boilerplate#readme",
   "author": "Pavel Lozinsky <jingle@live.com> (http://github.com/lozinsky)",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
-    "@types/node": "^6.0.38",
-    "@types/react": "^0.14.33",
-    "@types/react-dom": "^0.14.16",
+    "@types/enzyme": "^2.4.34",
+    "@types/jest": "^15.1.32",
+    "@types/node": "^6.0.41",
+    "@types/react": "^0.14.37",
+    "@types/react-dom": "^0.14.17",
     "autoprefixer": "^6.4.1",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
-    "css-loader": "^0.24.0",
+    "css-loader": "^0.25.0",
     "del": "^2.2.2",
     "empty-module": "0.0.2",
-    "eslint": "^3.4.0",
-    "eslint-plugin-node": "^2.0.0",
+    "enzyme": "^2.4.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
-    "mobx-react-devtools": "^4.2.5",
-    "node-sass": "^3.8.0",
-    "postcss-loader": "^0.11.1",
-    "sass-loader": "^4.0.1",
+    "mobx-react-devtools": "^4.2.6",
+    "node-sass": "^3.10.0",
+    "postcss-loader": "^0.13.0",
+    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
-    "stylelint": "^7.2.0",
     "stylelint-scss": "^1.3.4",
     "ts-loader": "^0.8.2",
-    "tslint": "^3.15.1",
-    "typescript": "^2.0.2",
+    "typescript": "^2.0.3",
+    "typescript-babel-jest": "^0.1.5",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.15.1",
+    "webpack-dev-server": "^1.16.1",
     "webpack-merge": "^0.14.1",
     "webpack-notifier": "^1.4.1"
   },
   "dependencies": {
     "mobx": "^2.5.1",
-    "mobx-react": "^3.5.5",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1"
+    "mobx-react": "^3.5.6",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
   }
 }
