--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ node_js:
   - "6"
 install:
     - npm i -g webpack stylelint eslint eslint-plugin-node jest-cli tslint typescript@2.0.3
-    - npm install
+    - npm i
 script:
     - npm run travis
