--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "mobx-react-devtools": "^4.2.6",
     "node-sass": "^3.10.0",
     "postcss-loader": "^0.13.0",
+    "react-addons-test-utils": "^15.3.2",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "stylelint-scss": "^1.3.4",
