--- a/.jestrc
+++ b/.jestrc
@@ -6,5 +6,5 @@
       "json",
       "js"
     ],
-    "testRegex": "/__tests__/.*\\.(ts|tsx)$"
+    "testRegex": "/__tests__/.*\\.test\\.(ts|tsx)$"
 }
