--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm run server",
     "server": "webpack-dev-server --progress --colors --config ./misc/start",
     "build": "npm run clean && webpack --progress --colors -p --config ./misc/start",
-    "test": "jest --config jestconfig.json --no-cache",
+    "test": "jest --config .jestrc --no-cache",
     "clean": "node ./misc/utils/clean",
     "lint": "npm run lint:scripts && npm run lint:styles",
     "lint:scripts": "tslint --type-check --project tsconfig.json",
@@ -60,7 +60,7 @@
     "stylelint-scss": "^1.3.4",
     "ts-loader": "^0.8.2",
     "typescript": "^2.0.3",
-    "typescript-babel-jest": "^0.1.5",
+    "typescript-babel-jest": "^0.1.6",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1",
