--- a/package.json
+++ b/package.json
@@ -70,8 +70,11 @@
     "webpack-notifier": "^1.4.1"
   },
   "dependencies": {
-    "mobx": "^2.5.1",
-    "mobx-react": "^3.5.6",
+    "@horizon/client": "^2.0.0",
+    "@types/moment": "^2.13.0",
+    "mobx": "^2.6.0",
+    "mobx-react": "^3.5.8",
+    "moment": "^2.15.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   }
