--- a/package.json
+++ b/package.json
@@ -37,15 +37,20 @@
   "devDependencies": {
     "@types/enzyme": "^2.4.34",
     "@types/jest": "^15.1.32",
+    "@types/material-ui": "^0.15.36",
+    "@types/moment": "^2.13.0",
     "@types/node": "^6.0.41",
     "@types/react": "^0.14.37",
     "@types/react-dom": "^0.14.17",
+    "@types/react-relay": "^0.9.4",
+    "@types/react-tap-event-plugin": "0.0.30",
     "autoprefixer": "^6.4.1",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-relay-plugin": "^0.9.3",
     "css-loader": "^0.25.0",
     "del": "^2.2.2",
     "empty-module": "0.0.2",
@@ -71,16 +76,16 @@
     "webpack-notifier": "^1.4.1"
   },
   "dependencies": {
-    "@horizon/client": "^2.0.0",
-    "@types/moment": "^2.13.0",
-    "@types/react-relay": "^0.9.4",
-    "babel-relay-plugin": "^0.9.3",
+    "formsy-material-ui": "^0.5.2",
+    "formsy-react": "^0.18.0",
+    "material-ui": "^0.15.4",
     "mobx": "^2.6.0",
     "mobx-react": "^3.5.8",
     "moment": "^2.15.1",
     "postgraphql": "^2.0.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-relay": "^0.9.3"
+    "react-relay": "^0.9.3",
+    "react-tap-event-plugin": "^1.0.0"
   }
 }
