--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "style-loader": "^0.13.1",
     "stylelint-scss": "^1.3.4",
     "sync-request": "^3.0.1",
-    "ts-loader": "^1.1.0",
+    "ts-loader": "^0.8.2",
     "typescript": "^2.0.3",
     "typescript-babel-jest": "^0.1.7",
     "url-loader": "^0.5.7",
@@ -82,6 +82,7 @@
   "dependencies": {
     "@types/history": "^2.0.39",
     "@types/react-bootstrap": "0.0.33",
+    "bootstrap-sass": "^3.3.7",
     "formsy-react": "^0.18.0",
     "formsy-react-components": "^0.8.1",
     "mobx": "^2.6.0",
