working mentions plugin with brackets

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,11 +19,13 @@
             "mobx"
 		]
 	},
+
 	"exclude": [
 		"node_modules",
 		"build",
 		"misc",
         "vendor",
-        "data"
+        "data",
+        "__test__"
 	]
 }
