--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react-router": "^2.0.38",
     "@types/react-tap-event-plugin": "0.0.30",
     "autoprefixer": "^6.4.1",
+    "awesome-typescript-loader": "^3.0.0-beta.18",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
@@ -71,8 +72,8 @@
     "style-loader": "^0.13.1",
     "stylelint-scss": "^1.3.4",
     "sync-request": "^3.0.1",
-    "ts-loader": "^0.8.2",
-    "typescript": "^2.1.1",
+    "ts-loader": "^2.0.0",
+    "typescript": "^2.1.5",
     "typescript-babel-jest": "^0.1.8",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
@@ -85,12 +86,19 @@
     "@types/history": "^2.0.39",
     "@types/react-bootstrap": "0.0.33",
     "bootstrap-sass": "^3.3.7",
+    "decorate-component-with-props": "^1.0.2",
     "draft-js": "^0.9.1",
     "draft-js-export-html": "^0.5.2",
+    "draft-js-hashtag-plugin": "^2.0.0-beta9",
+    "draft-js-plugins-editor": "^2.0.0-beta9",
     "draft-js-utils": "^0.1.7",
+    "find-with-regex": "^1.0.2",
     "formsy-react": "^0.18.0",
     "formsy-react-components": "^0.8.1",
     "gql2ts": "^0.3.1",
+    "immutable": "^3.8.1",
+    "js-yaml": "^3.7.0",
+    "lodash.escaperegexp": "^4.1.2",
     "mobx": "^2.6.0",
     "mobx-react": "^3.5.8",
     "moment": "^2.15.1",
@@ -103,6 +111,7 @@
     "react-router": "^3.0.0",
     "react-router-relay": "^0.13.5",
     "react-tap-event-plugin": "^1.0.0",
-    "react-touch": "^0.4.0"
+    "react-touch": "^0.4.0",
+    "union-class-names": "^1.0.0"
   }
 }
