--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "@types/enzyme": "^2.4.34",
     "@types/history": "^2.0.39",
     "@types/jest": "^15.1.32",
+    "@types/mathjs": "0.0.33",
     "@types/moment": "^2.13.0",
     "@types/node": "^6.0.41",
     "@types/react": "^0.14.37",
+    "@types/react-bootstrap": "0.0.33",
     "@types/react-dom": "^0.14.17",
     "@types/react-relay": "^0.9.4",
     "@types/react-router": "^2.0.38",
@@ -82,14 +84,12 @@
     "webpack-notifier": "^1.4.1"
   },
   "dependencies": {
-    "@types/draft-js": "^0.7.35",
-    "@types/history": "^2.0.39",
-    "@types/react-bootstrap": "0.0.33",
     "bootstrap-sass": "^3.3.7",
     "decorate-component-with-props": "^1.0.2",
-    "draft-js": "^0.9.1",
+    "draft-js": "^0.10.0",
     "draft-js-export-html": "^0.5.2",
     "draft-js-hashtag-plugin": "^2.0.0-beta9",
+    "draft-js-linkify-plugin": "^2.0.0-beta1",
     "draft-js-plugins-editor": "^2.0.0-beta9",
     "draft-js-utils": "^0.1.7",
     "find-with-regex": "^1.0.2",
@@ -99,6 +99,7 @@
     "immutable": "^3.8.1",
     "js-yaml": "^3.7.0",
     "lodash.escaperegexp": "^4.1.2",
+    "mathjs": "^3.9.0",
     "mobx": "^2.6.0",
     "mobx-react": "^3.5.8",
     "moment": "^2.15.1",
@@ -106,6 +107,8 @@
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.6",
     "react-bootstrap-typeahead": "^1.0.0-beta2",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.4.1",
     "react-relay": "^0.9.3",
     "react-router": "^3.0.0",
