--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "es6",
     "target": "es6",
     "jsx": "react",
     "experimentalDecorators": true,
@@ -30,6 +30,9 @@
   "awesomeTypescriptLoaderOptions": {
     "silent": true,
     "useBabel": true,
-    "useCache": true
+    "useCache": true,
+    "usePrecompiledFiles": true,
+    "useTranspileModule": true,
+    "transpileOnly": true
   }
 }
