not working build due to Relay.QL

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,14 +9,7 @@
     "sourceMap": true,
     "allowSyntheticDefaultImports": true,
     "noFallthroughCasesInSwitch": true,
-    "moduleResolution": "node",
-    "types": [
-      "node",
-      "jest",
-      "react",
-      "react-dom",
-      "mobx"
-    ]
+    "moduleResolution": "node"
   },
 
   "exclude": [
