--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
   "author": "Pavel Lozinsky <jingle@live.com> (http://github.com/lozinsky)",
   "license": "MIT",
   "devDependencies": {
+    "@types/core-js": "^0.9.35",
     "@types/draft-js": "^0.7.34",
     "@types/enzyme": "^2.4.34",
     "@types/history": "^2.0.39",
     "@types/jest": "^15.1.32",
+    "@types/js-yaml": "^3.5.29",
     "@types/mathjs": "0.0.33",
     "@types/moment": "^2.13.0",
     "@types/node": "^6.0.41",
@@ -61,7 +63,7 @@
     "empty-module": "0.0.2",
     "enzyme": "^2.4.1",
     "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.9.0",
     "gql2ts": "^0.4.0",
     "html-webpack-plugin": "^2.22.0",
@@ -70,6 +72,7 @@
     "node-sass": "^3.10.0",
     "postcss-loader": "^0.13.0",
     "react-addons-test-utils": "^15.3.2",
+    "react-hot-loader": "^3.0.0-beta.6",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "stylelint-scss": "^1.3.4",
@@ -78,13 +81,14 @@
     "typescript": "^2.1.5",
     "typescript-babel-jest": "^0.1.8",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.1",
-    "webpack-merge": "^0.14.1",
-    "webpack-notifier": "^1.4.1"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0",
+    "webpack-merge": "^2.6.1",
+    "webpack-notifier": "^1.5.0"
   },
   "dependencies": {
     "bootstrap-sass": "^3.3.7",
+    "core-js": "^2.4.1",
     "decorate-component-with-props": "^1.0.2",
     "draft-js": "^0.10.0",
     "draft-js-export-html": "^0.5.2",
@@ -97,7 +101,7 @@
     "formsy-react-components": "^0.8.1",
     "gql2ts": "^0.3.1",
     "immutable": "^3.8.1",
-    "js-yaml": "^3.7.0",
+    "js-yaml": "^3.8.1",
     "lodash.escaperegexp": "^4.1.2",
     "mathjs": "^3.9.0",
     "mobx": "^2.6.0",
