--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,10 @@
     "sourceMap": true,
     "allowSyntheticDefaultImports": true,
     "noFallthroughCasesInSwitch": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "lib": [
+      "es2017"
+    ]
   },
   "exclude": [
     "node_modules",
