before new design try

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "webpack-notifier": "^1.5.0"
   },
   "dependencies": {
+    "bootstrap-material-design": "^0.5.10",
     "bootstrap-sass": "^3.3.7",
     "core-js": "^2.4.1",
     "decorate-component-with-props": "^1.0.2",
