--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lint": "npm run lint:scripts && npm run lint:styles",
     "lint:scripts": "tslint --type-check --project tsconfig.json",
     "lint:styles": "stylelint source/styles/**/*.scss -s scss",
-    "travis": "npm run lint && npm test && npm run build"
+    "travis": "npm run lint && npm test && npm run build",
+    "stage": "stage",
+    "commit": "commit"
   },
   "repository": {
     "type": "git",
@@ -54,6 +56,7 @@
     "awesome-typescript-loader": "^3.0.0-beta.18",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
+    "babel-plugin-transform-relay-hot": "0.0.6",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
@@ -71,6 +74,7 @@
     "node-fetch": "^1.6.3",
     "node-sass": "^3.10.0",
     "postcss-loader": "^0.13.0",
+    "postgres-schema-updater": "^1.1.1",
     "react-addons-test-utils": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.6",
     "sass-loader": "^4.0.2",
@@ -87,8 +91,6 @@
     "webpack-notifier": "^1.5.0"
   },
   "dependencies": {
-    "bootstrap-material-design": "^0.5.10",
-    "bootstrap-sass": "^3.3.7",
     "core-js": "^2.4.1",
     "decorate-component-with-props": "^1.0.2",
     "draft-js": "^0.10.0",
@@ -110,7 +112,8 @@
     "moment": "^2.15.1",
     "postgraphql": "^2.0.0",
     "react": "^15.4.1",
-    "react-bootstrap": "^0.30.6",
+    "react-addons-css-transition-group": "^15.5.2",
+    "react-addons-transition-group": "^15.5.2",
     "react-bootstrap-typeahead": "^1.0.0-beta2",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
@@ -120,6 +123,7 @@
     "react-router-relay": "^0.13.5",
     "react-tap-event-plugin": "^1.0.0",
     "react-touch": "^0.4.0",
+    "reactstrap": "^4.5.0",
     "union-class-names": "^1.0.0"
   }
 }
