--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
     "lib": [
-      "es2017"
+      "es2017",
+      "dom"
     ]
   },
   "exclude": [
